...
            "state": "translated",
            "value": "连接工作区后即可使用语音输入。"
          }
        }
      }
    },
    "Connect the conversation to the right moment.": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "把这次对话连接到正确时刻。"
          }
...
